csky: coding convenions.
Change-Id: I1ac522424a1b79045d93781ff20abb8dcf6ba3dc

--- a/Kconfig
+++ b/Kconfig
@@ -1,3 +1,19 @@
 config NATIONALCHIP_ETH
-	bool "nationalchip eth"
+	bool
+	default n
+
+config NATIONALCHIP_IRQ
+	bool
+	default n
+
+config NATIONALCHIP_TIMER
+	bool
+	default n
+
+config NATIONALCHIP
+	bool "nationalchip drivers"
+	default n
+	select NATIONALCHIP_ETH
+	select NATIONALCHIP_IRQ
+	select NATIONALCHIP_TIMER
 
