--- a/drivers/clocksource/Kconfig
+++ b/drivers/clocksource/Kconfig
@@ -2,5 +2,7 @@ menu "Clock Source drivers (in addons)"
 
 config NATIONALCHIP_TIMER
 	bool "nationalchip timer"
+	select CLKSRC_MMIO
+	select CLKSRC_OF
 	default n
 endmenu
