csky: bugfix Makefile coding error.
Change-Id: I9e4c13adf945c0b8e947c14d722dd029751f539c

--- a/drivers/irqchip/Makefile
+++ b/drivers/irqchip/Makefile
@@ -1,2 +1,2 @@
-obj-$(CONFIG_NATIONALCHIP_IRQ) := irq-nationalchip.o
-obj-$(CONFIG_CSKY_IRQ) := irq-csky.o
+obj-$(CONFIG_NATIONALCHIP_IRQ)	+= irq-nationalchip.o
+obj-$(CONFIG_CSKY_IRQ)		+= irq-csky.o
