--- a/Kconfig
+++ b/Kconfig
@@ -2,3 +2,4 @@ source addons/drivers/clocksource/Kconfig
 source addons/drivers/irqchip/Kconfig
 source addons/drivers/pinctrl/Kconfig
 source addons/drivers/clk/Kconfig
+source addons/drivers/net/ethernet/Kconfig
