add cskymac driver
Change-Id: I5d312d92cdb88ec65c62ea6ac3fd73dc35c9cdf0

--- a/addons/drivers/net/ethernet/Kconfig
+++ b/addons/drivers/net/ethernet/Kconfig
@@ -1,5 +1,6 @@
 menu "Ethernet drivers (in addons)"
 
 source addons/drivers/net/ethernet/silan_stmmac/Kconfig
+source addons/drivers/net/ethernet/cskymac/Kconfig
 
 endmenu
