csky: ncfb compile ok.
Signed-off-by: Guo Ren <ren_guo@c-sky.com>

--- a/addons/Makefile
+++ b/addons/Makefile
@@ -3,4 +3,5 @@ obj-y += drivers/clk/
 obj-y += drivers/irqchip/
 obj-y += drivers/clocksource/
 obj-y += drivers/net/ethernet/
+obj-y += drivers/video/fbdev/nationalchip/
 
