--- a/addons/Kconfig
+++ b/addons/Kconfig
@@ -3,3 +3,4 @@ source addons/drivers/clk/Kconfig
 source addons/drivers/clocksource/Kconfig
 source addons/drivers/irqchip/Kconfig
 source addons/drivers/net/ethernet/Kconfig
+source addons/drivers/video/fbdev/Kconfig
